cc_library(
    name = "decode-string",
    srcs = [
        "src/decode_string.cpp",
    ],
    hdrs = glob(["include/*.hpp"], allow_empty = True),
    includes = [
        "include",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@ng-log//:ng-log",
    ],
)

alias(
    name = "decode_string",
    actual = ":decode-string",
    visibility = ["//visibility:public"],
)
