###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
cc_library(
    name = "fibonacci",
    srcs = [
    "src/fibonacci.cpp",
    ],
    hdrs = glob(["include/*.hpp"], allow_empty=True),
    includes = [
        "include",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@ng-log//:ng-log",  # Replace with actual ng-log Bazel target if available
    ],
)
