###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

cc_library(
    name = "level_order",
    srcs = [
        "src/level_order.cpp",
        "src/tree_node.cpp",
    ],
    hdrs = glob(["include/*.hpp"], allow_empty = True),
    includes = [
        "include",
    ],
    visibility = ["//visibility:public"],
)
