# Library target for maximum-subarray
cc_library(
    name = "maximum-subarray",
    srcs = ["src/rmaximum-subarray.cpp"],
    hdrs = [],
    visibility = ["//visibility:public"],
    deps = [
        "@ng-log//:ng-log",  # Replace with actual ng-log Bazel target if available
    ],
)
###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
