###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
cc_library(
    name = "rotting_oranges",
    srcs = [
        "src/rotting_oranges.cpp",
    ],
    hdrs = glob(["include/*.hpp"]),
    includes = [
        "include",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@ng-log//:ng-log",  # Replace with actual ng-log Bazel target if available
    ],
)
