package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["COPYING"])

# cc_library(
#     name = "test_headers",
#     hdrs = glob(["include/*.hpp"]),
#     strip_include_prefix = "include",
#     visibility = ["//visibility:public"],
# )


cc_test(
    name = "tests-cpp-examples",
    includes = [
        ],
    srcs = [
        "gtest_main.cc",
    ],
    deps = [
        "@googletest//:gtest_main",
        "@ng-log//:ng-log",
        "//friendly-ll:friendly-ll",
        "//friendly-ll/tests:tests-friendly-ll",
        "//ranges:ranges",
        "//ranges/tests:tests-ranges",
        "//maximum-subarray:maximum-subarray",
        "//maximum-subarray/tests:tests-maximum-subarray",
    ],
)
