package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["COPYING"])

cc_library(
    name = "tests-cpp-examples",
    includes = [],
    srcs = ["gtest_main.cc"],
    deps = [
        "@ng-log//:ng-log",
        "//utils:utils",
        "//utils/tests:tests-utils",
        "//friendly-ll:friendly-ll",
        "//friendly-ll/tests:tests-friendly-ll",
        "//ranges:ranges",
        "//ranges/tests:tests-ranges",
        "//maximum-subarray:maximum-subarray",
        "//maximum-subarray/tests:tests-maximum-subarray",
        "//handlers:handlers",
        "//handlers/tests:tests-handlers",
        "//fibonacci:fibonacci",
        "//fibonacci/tests:tests-fibonacci",
    ],
)
