package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["COPYING"])

cc_test(
    name = "tests-cpp-examples",
    includes = [
        ],
    srcs = [
        "gtest_main.cc",
    ],
    deps = [
        "@googletest//:gtest_main",
        "@ng-log//:ng-log",
        "//friendly-ll:friendly-ll",
        "//friendly-ll/tests:tests-friendly-ll",
        "//ranges:ranges",
        "//ranges/tests:tests-ranges",
        "//maximum-subarray:maximum-subarray",
        "//maximum-subarray/tests:tests-maximum-subarray",
        "//handlers:handlers",
        "//handlers/tests:tests-handlers",
        "//fibonacci:fibonacci",
        "//fibonacci/tests:tests-fibonacci",
        "//largest_square:largest_square",
        "//largest_square/tests:tests-largest_square",
        "//lru_cache:lru_cache",
        "//lru_cache/tests:tests-lru_cache",
        "//rotting-oranges:rotting_oranges",
        "//rotting-oranges/tests:tests-rotting_oranges",
    ],
)
