package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["COPYING"])

cc_library(
    name = "tests-friendly-ll",
    hdrs = glob(["include/*.hpp"]),
    strip_include_prefix = "include",
    srcs = [
        "src/list_utils.cpp",
        "src/clone_solution_typed_test.cpp",
    ],
    deps = [
        "//friendly-ll:friendly-ll",
        "@googletest//:gtest_main",
        "@ng-log//:ng-log",
    ],
    visibility = ["//visibility:public"],
)


