package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["COPYING"])

cc_library(
    name = "tests-largest_square",
    hdrs = glob(["include/*.hpp"], allow_empty=True),
    strip_include_prefix = "include",
    srcs = [
        "src/largest_square_generic_test.cpp",
    ],
    deps = [
        "//largest_square:largest_square",
        "@googletest//:gtest_main",
        "@ng-log//:ng-log",
    ],
    visibility = ["//visibility:public"],
)


