package(default_visibility = ["//visibility:public"])

licenses(["notice"])

exports_files(["COPYING"])

cc_library(
    name = "tests-maximum-subarray",
    hdrs = glob(["include/*.hpp"], allow_empty = True,),
    strip_include_prefix = "include",
    srcs = [
        "src/max_subarray_test.cpp",
    ],
    deps = [
        "//maximum-subarray:maximum-subarray",
        "@googletest//:gtest_main",
        "@ng-log//:ng-log",
    ],
    visibility = ["//visibility:public"],
)


